--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <p> My name is Jinesh Modi </p>
 <hr>
 <li>Hi</li>
-<p> A new feature1 branch is created by me</p>
+<p> A new button branch is created by me</p>
